--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description"
+          content="An elixir regular expression editor & tester">
+    <meta name="author" content="Louis Pilfold">
 
-    <title>RegTest - An Elixir Regular Expression Editor & Tester</title>
+    <title>RegTest - an elixir regular expression editor & tester</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
