--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -8,7 +8,7 @@
           content="An elixir regular expression editor & tester">
     <meta name="author" content="Louis Pilfold">
 
-    <title>RegTest - an elixir regular expression editor & tester</title>
+    <title>RegTest - An Elixir regular expression editor & tester</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
