--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div ng-app="elixre" class="container">
       <%= @inner %>
     </div>
     <script src="<%= static_path(@conn, "/main.js") %>"></script>
