scss typography and code

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,7 +1,4 @@
 @import 'modules/colours';
 
-$colour: pink;
-
-body {
-  background-color: $colour;
-}
+@import 'partials/typography';
+@import 'partials/code';
