--- a/client/styles/modules/_colours.scss
+++ b/client/styles/modules/_colours.scss
@@ -5,8 +5,4 @@ $c-black:        #333;
 $c-black-lt:     #555;
 $c-grey:         #aaa;
 $c-grey-lt:      #e9e9e9;
-
-
-$c-text:       $c-black;
-$c-text-lt:    $c-black-lt;
-$c-text-faint: $c-grey;
+$c-bold:         #d14;
