Fiddle with results display

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -2,3 +2,11 @@
 
 @import 'partials/typography';
 @import 'partials/code';
+
+.results__result {
+  padding-bottom: 1.1em;
+
+  &:last-child {
+    padding-bottom: 0;
+  }
+}
