--- a/client/styles/partials/_code.scss
+++ b/client/styles/partials/_code.scss
@@ -4,7 +4,8 @@ code {
   border: 1px solid $c-secondary-dk;
   color: $c-black;
   font-family: Monaco, monospace, Courier, "Courier New";
-  font-size: 15px;
+  font-size: 14px;
+  line-height: 1.3em;
 
   .highlight {
     color: $c-bold;
