--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,12 +1,11 @@
 @import 'modules/colours';
 
+@import 'partials/base';
+
 @import 'partials/typography';
 @import 'partials/code';
 
-.results__result {
-  padding-bottom: 1.1em;
-
-  &:last-child {
-    padding-bottom: 0;
-  }
-}
+@import 'partials/page';
+@import 'partials/header';
+@import 'partials/test';
+@import 'partials/results';
