--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,20 +1,20 @@
-<main role="main" ng-controller="testController">
-  <p>
+<main class="test" role="main" ng-controller="testController">
+  <div>
     <label for="regex">Regex</label>
     <input name="regex" type="text"
            ng-model="regex" ng-change="test(regex,subject)"/>
-  </p>
+  </div>
 
-  <p>
+  <div>
     <label for="subject">Subject</label>
     <textarea name="subject"
               ng-model="subject" ng-change="test(regex,subject)"/></textarea>
-  </p>
+  </div>
 
-  <p>
+  <div>
     <label for="split">Split on newlines?</label>
     <input type="checkbox" name="split" ng-model="split">
-  </p>
+  </div>
 
   <pre class="results"><div class="results__result" 
                             ng-repeat="case in return.results"><result data="case"></div></pre>
