--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -4,6 +4,7 @@
 
 @import 'partials/typography';
 @import 'partials/code';
+@import 'partials/inputs';
 
 @import 'partials/page';
 @import 'partials/header';
