--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -8,5 +8,6 @@
 
 @import 'partials/page';
 @import 'partials/header';
+@import 'partials/footer';
 @import 'partials/test';
 @import 'partials/results';
