Apparently GitHub is spelt with a capital H

--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -32,7 +32,7 @@
       </p>
       <p>
         The source code is freely available on
-        <a href="http://github.com/lpil/elixre" target="_blank">Github</a>.
+        <a href="http://github.com/lpil/elixre" target="_blank">GitHub</a>.
         (Contributions welcome!)
       </p>
       <p>
