Monospace font for textareas

--- a/client/styles/partials/_inputs.scss
+++ b/client/styles/partials/_inputs.scss
@@ -1,7 +1,8 @@
 input,
 textarea {
   border: 1px solid #ddd;
-  font-size: 1em;
+  font-family: Monaco, monospace, Courier, "Courier New";
+  font-size: 14px;
   padding: 8px 10px;
   resize: vertical;
 }
