--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-  <div class="results">
+  <div ng-controller="resultsController" class="results">
     <pre><div class="results__result" 
               ng-repeat="case in return.results"
               ><result data="case"></div></pre>
