UI: Show subject as comment in results

--- a/client/styles/partials/_code.scss
+++ b/client/styles/partials/_code.scss
@@ -13,6 +13,11 @@ code {
     margin: -1px;
     padding: 1px;
   }
+
+  .no-hl {
+    background-color: $c-secondary;
+    color: $c-black;
+  }
 }
 
 
