Autofocus the regex input

--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -4,6 +4,7 @@
       <label for="regex">Regex</label>
       <input name="regex"
              type="text"
+             autofocus
              ng-model="regex"
              ng-change="test(regex,subject)"
              ng-model-options="{ debounce: 100 }"/>
