--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -38,6 +38,11 @@
     <pre><div class="results__error"
               ng-if="return.error"
               >Compilation Error!{{ '\n' + (return.error | json) }}</div
+
+              ><div class="results__regex"
+              ng-if="return.regex"
+              ># {{ return.regex + '\n\n'}}</div
+
               ><div class="results__result"
               ng-repeat="case in return.results"
               ><result data="case"></div></pre>
