Credit rubular in footer

--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -36,6 +36,10 @@
         (Contributions welcome!)
       </p>
       <p>
+        Inspired by Michael Lovitt's excellent
+        <a href="http://rubular.com/" target="_blank">Rubular</a>.
+      </p>
+      <p>
         Copyright © 2015
         <a href="http://lpil.uk/" target="_blank">Louis Pilfold</a>. All Rights
         Reserved.
