--- a/client/styles/base/_typography.scss
+++ b/client/styles/base/_typography.scss
@@ -7,12 +7,7 @@ body {
   line-height: 1.7em;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   color: $color-black;
   font-style: normal;
   font-weight: normal;
