--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Bitter);
+@import url(//fonts.googleapis.com/css?family=Bitter);
 
 body {
   color: $color-black-lt;
